[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moex-iss"
version = "1.0.0"
description = "Пакет для загрузки данных с MOEX ISS API (Московская Биржа)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Russia Macro Analysis Team"}
]
keywords = [
    "moex",
    "moscow exchange",
    "iss api",
    "финансовые данные",
    "индексы",
    "облигации",
    "акции",
    "russian market",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Russian",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "pandas>=1.5.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]
notebook = [
    "jupyter>=1.0.0",
    "matplotlib>=3.5.0",
]
excel = [
    "openpyxl>=3.0.0",
]
all = [
    "moex-iss[dev,notebook,excel]",
]

[project.scripts]
moex-iss = "moex_iss.cli:main"

[project.urls]
"Homepage" = "https://github.com/your-repo/moex-iss"
"Documentation" = "https://iss.moex.com/iss/reference/"
"MOEX ISS API" = "https://iss.moex.com/iss/reference/"
"Bug Tracker" = "https://github.com/your-repo/moex-iss/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["moex_iss*"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
